# Launcher

./: CMakeLists.txt  README.MD  mcc-rich-presence.ChildProcessDbgSettings  mcc-rich-presence.sln
common/: CMakeLists.txt  common_private_pch.h  common_public_pch.h
common/bcs/: callback.cpp  callback.h  callback_impl.c  string_lookup.h
common/cseries/: cseries.cpp  cseries.h  flags.h  static_string.h
common/text/: unicode.cpp  unicode.h
delta/: CMakeLists.txt
delta/interface/: CMakeLists.txt  interface_private_pch.h  main.cpp
games/: CMakeLists.txt
games/gamelib/: CMakeLists.txt  gamelib_private_pch.h  gamelib_public_pch.h
games/gamelib/memory/: module.cpp  module.h
games/gamelib/shell/: delta_interface.h
games/halo2lib/: CMakeLists.txt
games/halo2lib/source/: halo2lib_private_pch.h
games/halo2lib/source/main/: main_time.cpp  main_time.h
games/halo2lib/source/shell/: delta_interface.cpp
games/halo3lib/: CMakeLists.txt
games/halo3lib/source/: halo3lib_private_pch.h
games/halo3lib/source/game/: game_options.cpp  game_options.h
games/halo3lib/source/shell/: delta_interface.cpp
games/mcclib/: CMakeLists.txt  data_patching.h  debug_print.cpp  discord_manager.cpp  discord_manager.h  dllmain.cpp  mcclib-private-pch.cpp  mcclib-private-pch.h  mcclib_private_pch.h  steam_manager.cpp  steam_manager.h  ufg.cpp  ufg.h  xlive_manager.cpp
launcher/: interface.cpp  interface.h  launch.cpp  launch.h  launcher-private-pch.cpp  launcher-private-pch.h  launcher.rc  launcher.vcxproj  launcher.vcxproj.filters  main.cpp  steam_appid.txt
launcher/ui/: resource_loading.cpp  resource_loading.h
mcc/: CMakeLists.txt
mcc/mcclauncher/: CMakeLists.txt  game_launcher.cpp  game_launcher.h  main.cpp  mcclauncher_private_pch.h  ul_interface.cpp  ul_interface.h
mcc/mcclib/: CMakeLists.txt  dllmain.cpp  game_library_hooks.cpp  game_library_hooks.h  mcclib_private_pch.h
mcclauncher/: CMakeLists.txt  game_launcher.cpp  game_launcher.h  main.cpp  mcclauncher.cpp  mcclauncher_private_pch.h  ul_interface.cpp  ul_interface.h
mcclauncher/assets/launcher/: index.html
mcclib/: data_patching.cpp  debug_print.h  dllmain.cpp  mcclib.vcxproj  mcclib.vcxproj.filters  steam_manager.cpp  xlive_manager.h
